tests/paczka1/small_fuzzy/73704577.err
Error in line 6: wZZ S197 23,6
Error in line 5: 9HX9UAZMNOt A478 29,6
